--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "~1.4.7",
     "angular-route": "~1.4.7",
     "foundation": "~5.5.3",
-    "socket.io-client": "~1.3.7"
+    "socket.io-client": "~1.3.7",
+    "webrtc-adapter": "~0.2.5"
   }
 }
